# honest-chip-8

./: .gitignore  README.md
src/: CMakeLists.txt  Emulator.cpp  Emulator.h  View.cpp  View.h  chip_types.h  graphic.cpp  graphic.h  hardware_emulator.cpp  hardware_emulator.h  main.cpp  opcode_decoder.cpp  opcode_decoder.h
src/tests/: test_hardware_emulator.cpp  test_hardware_emulator.h  test_opcode_decoder.cpp  test_opcode_decoder.h
